# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "rustos"
version = "0.1.0"
authors = ["Joshua Crocker <joshua+code@crocker.io>"]
edition = "2018"

[package.metadata.bootimage]
test-args = [
    # Set up the devices attached to our operating system. In this instance we 
    # are attaching the isa-debug-exit device to the emulator using the 
    # port-mapped IO communication scheme, setting the port address to 0xf4, and
    # the port size to 0x04.
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
    
    # Redirect the serial output from the emulator to stdio, in order to print
    # it in the console.
    "-serial", "stdio",

    # Hide the QEMU window when we are running in a test environment. This is
    # much better than having the window pop up, albiet for a few moments, as
    # this now enables us to be able to run the tests in non-GUI environments,
    # such as through CI services or over SSH.
    "-display", "none"
]
test-success-exit-code = 33                                                     # (0x10 << 1) | 1
test-timeout = 300                                                              # (in seconds)

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false

# [profile.dev]
# panic = "abort"

# [profile.release]
# panic = "abort"

[dependencies]
rlibc = "1.0.0"
bootloader = "0.9.8"
volatile = "0.3.0"
spin = "0.5.2"
x86_64 = "0.11.2"
uart_16550 = "0.2.7"

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]
